test with clj-memory-meter